# LigandMPNN

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  model_utils.py  pyproject.toml  run.py  sc_utils.py  score.py
.devcontainer/: devcontainer.json
openfold/data/: data_pipeline.py
scripts/: get_model_params_new.sh  run_examples.sh  sc_examples.sh
src/ligandmpnn/: __main__.py  data.py  params.py  paths.py  score.py  sidechain.py
src/ligandmpnn/openfold/: config.py
src/ligandmpnn/openfold/data/: data_modules.py  data_pipeline.py  data_transforms.py  feature_pipeline.py  input_pipeline.py  mmcif_parsing.py  parsers.py  templates.py
src/ligandmpnn/openfold/data/tools/: hhblits.py  hhsearch.py  jackhmmer.py  kalign.py  utils.py
src/ligandmpnn/openfold/np/: protein.py  residue_constants.py
src/ligandmpnn/openfold/np/relax/: amber_minimize.py  cleanup.py  relax.py  utils.py
src/ligandmpnn/openfold/utils/: feats.py  loss.py  rigid_utils.py  tensor_utils.py
src/ligandmpnn/params/: __init__.py  __main__.py  common.py  washington_university.py  xyme.py
tests/: conftest.py
tests/fixtures/protein_mpnn_seed-111_1BC8/seqs/: 1BC8.fa
tests/integration/ligandmpnn/params/: test_xyme.py
tests/ligandmpnn/: test_protein_mpnn.py
