[project]
name = "ligandmpnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy~=1.23.5",
    "biopython~=1.79",
    "prody~=2.4.1",
    "torch~=2.2.2",
    "ml-collections~=0.1.1",
    "dm-tree~=0.1.8"
]

[project.urls]
repository = 'https://github.com/xymeai/ligandmpnn.git'
issue-tracker = 'https://github.com/xymeai/ligandmpnn/issues'

[dependency-groups]
dev = [
    "ruff>=0.7.3", 
    "pytest>=8.0", 
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--doctest-modules"]
norecursedirs = [
    "inputs",
]

[tool.ruff]
line-length = 88
respect-gitignore = true
show-fixes = true
fix = true
target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimz
    "E",   # pycodestyle error
    "G",   # flake8-logging-format
    "I",   # isort
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
    "YTT", # flake8-2020
]

ignore = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"