[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0", "setuptools_scm>=6.2.0"]

[project]
name = "ligandmpnn"
description = "LigandMPNN is a deep-learning-based protein sequence design method that can explicitly model all nonprotein components of biomolecular systems"
readme = "README.md"
requires-python = ">=3.11,<3.12"
version = "1.0.0"
dependencies = [
    "numpy>=1.26.0",
    "biopython~=1.79",
    "prody>=2.4.1",
    "torch>=2.5.1",
    "ml-collections~=0.1.1",
    "dm-tree~=0.1.8",
    "aiohttp[speedups]>=3.12.15",
    "aiodns>=3.5.0",
    "aiofiles>=24.1.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "pytorch-lightning>=2.5.5",
]

[project.urls]
repository = 'https://github.com/xymeai/ligandmpnn.git'
issue-tracker = 'https://github.com/xymeai/ligandmpnn/issues'

[project.scripts]
ligandmpnn = "ligandmpnn:__main__"

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--doctest-modules"]
norecursedirs = [
    "inputs",
]

[tool.ruff]
line-length = 88
respect-gitignore = true
show-fixes = true
fix = true
target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimz
    "E",   # pycodestyle error
    "G",   # flake8-logging-format
    "I",   # isort
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
    "YTT", # flake8-2020
]

ignore = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[[tool.uv.index]]
name = "xyme-pypi-dev"
url = "https://pypi.dev.xyme.cloud/"
publish-url = "https://pypi.dev.xyme.cloud/"


[[tool.uv.index]]
name = "xyme-pypi"
url = "https://pypi.prd.xyme.cloud/"
publish-url = "https://pypi.prd.xyme.cloud/"
